--- a/views/pages/edit-product.ejs
+++ b/views/pages/edit-product.ejs
@@ -30,6 +30,8 @@
       <label for="product-description">Description:</label>
       <textarea id="product-description" name="description"><%= item.description %></textarea>
     </div>
+    <input type="hidden" name="productId" value= <%= productId %>>
+    
     <div class="product-actions">
       <input type="submit" class="btn save-changes" value="Save Changes">
       <button type="button" class="btn delete-product">Delete Product</button>
