--- a/views/pages/edit-product.ejs
+++ b/views/pages/edit-product.ejs
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Product: <%= item.name %></title>
   <link rel="stylesheet" href="/stylesheets/editProduct.css">
-  <%- include('../partials/head.ejs', {token: token}) %>
+  <%- include('../partials/head.ejs', {token: token, admin : admin}) %>
 </head>
 <body>
-  <form id="edit-product-form" class="edit-product-container" action="/update-product/<%= productId %>" method="post">
+  <form id="edit-product-form" class="edit-product-container" action="/edit-product/<%= productId %>" method="post">
     <div class="product-image">
       <label for="product-image-url">Product Image URL:</label>
       <input type="text" id="product-image-url" name="image" value="<%= item.image %>">
