--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -10,6 +10,11 @@
 </head>
 <body>
   <h1><%= title %></h1>
+  <% if (message !== null && message != "") { %>
+    <script>
+        alert("<%= message %>");
+    </script>
+    <% } %>
   <% if (items && items.length > 0) { %>
     <div class="product-grid">
       <% items.forEach(function(item) { %>
