edit / view redirect based on user type
previously they safely crashed.

now they send back to the corresponding page.

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -33,7 +33,7 @@
     <p>No items to display.</p>
   <% } %>
 
-  <% if (message !== null) { %>
+  <% if (message !== null && message != "") { %>
     <script>
         alert("<%= message %>");
     </script>
