--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -23,6 +23,8 @@
         <%= title.includes('guest') ? 'Guest' : title %>'s Shopping Cart
       </h1>
       <% if (items && items.length> 0) { %>
+        <!-- <% items.sort() %> -->
+
         <% items.forEach(function(item) { %>
         <div class="cart-item">
           <% if (item.image) { %>
