--- a/views/pages/view-product.ejs
+++ b/views/pages/view-product.ejs
@@ -15,6 +15,7 @@
       <div class="product-details">
         <h1>
           <%= item.name %>
+          <% console.log(item.name) %>
         </h1>
         <div class="product-image">
           <img src="<%= item.image %>" style="max-width: 400px; height: auto;">
