--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -5,30 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout Page</title>
   <link rel="stylesheet" href="/stylesheets/checkout.css">
-  <%- include('../partials/head.ejs', {token:token, admin: false}) %>
+  <%- include('../partials/head.ejs', {token: token, admin: false}) %>
 </head>
 <body>
   <div class="checkout-container">
-    <form class="checkout-form">
+    <form class="checkout-form" action="/checkout" method="post">
+      <input type="hidden" name="token" value=<%= token %>>
       <div class="form-group">
-        <label for="first-name">First:</label>
-        <input type="text" id="first-name" name="first-name" required>
+        <label for="firstName">First:</label>
+        <input type="text" id="firstName" name="firstName" required>
       </div>
       <div class="form-group">
-        <label for="last-name">Last:</label>
-        <input type="text" id="last-name" name="last-name" required>
+        <label for="lastName">Last:</label>
+        <input type="text" id="lastName" name="lastName" required>
       </div>
       <div class="form-group">
-        <label for="card-number">Card #:</label>
-        <input type="text" id="card-number" name="card-number" required>
+        <label for="cardNumber">Card #:</label>
+        <input type="number" id="cardNumber" name="cardNumber" required>
       </div>
       <div class="form-group">
-        <label for="expiration-date">Expiration Date:</label>
-        <input type="text" id="expiration-date" name="expiration-date" required placeholder="MM / YY">
+        <label for="expirationDate">Expiration Date:</label>
+        <input type="month" id="expirationDate" name="expirationDate" required>
       </div>
       <div class="form-group">
         <label for="cvv">CVV:</label>
-        <input type="text" id="cvv" name="cvv" required>
+        <input type="number" id="cvv" name="cvv" required>
       </div>
       <div class="form-group">
         <label for="address">Address:</label>
@@ -44,7 +45,7 @@
       </div>
       <div class="form-group">
         <label for="zip">Zip:</label>
-        <input type="text" id="zip" name="zip" required>
+        <input type="number" id="zip" name="zip" required>
       </div>
       <button type="submit" class="pay-button">Pay!</button>
     </form>
