--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -34,6 +34,36 @@
     <p>No items to display.</p>
   <% } %>
 
+
+   
+
+  <% if (admin && adminItems && adminItems.length > 0) { %>
+    <div class="deletion">
+      <p> Deleted Products </p>
+    </div>
+
+    
+
+    <!-- <% adminItems.sort() %> -->
+    <div class="product-grid">
+      <% adminItems.forEach(function(item) { %>
+        <a href="/<% if (admin) { %>edit<% } else { %>view<% } %>-product/<%= item.product_id %><%= token ? '?session=' + token : '' %>" class="product-link">
+          <div class="product-card">
+            <h2 class="product-name"><%= item.name %></h2>
+            <% if (item.image) { %>
+              <img class="product-image" src="<%= item.image %>" alt="Image of <%= item.name %>">
+            <% } else if (item.thumbnail) { %>
+              <img class="product-image" src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
+            <% } %>
+            <p class="product-price">Price: $<%= item.price %></p>
+            <p class="product-quantity">Quantity: <%= item.quantity %></p>
+            <p class="product-description"><%= item.description %></p>
+          </div>
+        </a>
+      <% }); %>      
+    </div>
+  <% } %>
+
   <% if (message !== null && message != "") { %>
     <script>
         alert("<%= message %>");
