--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -36,7 +36,7 @@
                                 <label for="quantity">Qty:</label>
                                 <!--<input id="quantity" type="number" value=<%= item.quantity %> />-->
                                 <form class="update-quantity" action="/cart/update-quantity" method="post">
-                                    <input id="quantity" type="number" name="quantity" value=<%= item.quantity %> onchange="this.form.submit()" />
+                                    <input id="quantity" type="number" name="quantity" min="0" value=<%= item.quantity %> onchange="this.form.submit()" />
                                     <input type="hidden" name="token" value=<%=token %>>
                                     <input type="hidden" name="uid" value=<%=user_id %>>
                                     <input type="hidden" name="pid" value=<%=item.product_id %>>
