Handling negative quantity in backend too

--- a/views/pages/edit-product.ejs
+++ b/views/pages/edit-product.ejs
@@ -24,7 +24,7 @@
       
       <div class="quantity-editor">
         <label for="quantity">Qty:</label>
-        <input type="number" id="quantity" name="quantity" value="<%= item.quantity %>">
+        <input type="number" id="quantity" name="quantity" min="0" value="<%= item.quantity %>">
       </div>
     </div>
     <div class="product-description">
