--- a/views/pages/create-account.ejs
+++ b/views/pages/create-account.ejs
@@ -35,7 +35,7 @@
     <div class="username-message">
       <p> This username is already taken </p>
     </div>
-    <% console.log("this code ran!") %>
+    <!-- <% console.log("this code ran!") %> -->
   <% } %>
   <div class="login-container">
     <form class="create-account-form" action="/create-account" method="post">
